# notion2pandoc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
embed/: providers.json
sample/: json_output.json  json_to_gfm.md  json_to_haskell_ast.hs  notion_to_json_to_html.html
src/: embed.rs  main.rs  notion.rs  pandoc.rs
