[package]
edition = "2021"
name = "notion2pandoc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = {version = "0.4.1", features = ["serde"]}
clap = {version = "3.2.20", features = ["derive"]}
futures = "0.3.24"
itertools = "0.10.3"
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["full"]}
uuid = {version = "1.1.2", features = ["v4", "serde"]}
