[package]
authors = ["Hayate Nakano <nakanodesu@gmail.com>"]
description = "convert Notion page to Pandoc AST"
edition = "2021"
license = "MIT"
name = "notion2pandoc"
readme = "README.md"
repository = "https://github.com/ho-oto/notion2pandoc"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = {version = "0.4.1", features = ["serde"]}
clap = {version = "3.2.20", features = ["derive"]}
futures = "0.3.24"
itertools = "0.10.3"
regex = "1.6.0"
reqwest = {version = "0.11.11", features = ["json"]}
scraper = "0.13.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["full"]}
uuid = {version = "1.1.2", features = ["v4", "serde"]}
